--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,6 +140,7 @@ tr:hover {
 
 /* Fonte dos Dados */
 .font-data {
+    width: 90%;
     margin: 40px 0 20px 0;
     text-align: center;
     font-size: 14px;
